src/test/ui/meta-expected-error-correct-rev.a.stderr
error[E0308]: mismatched types
  --> $DIR/meta-expected-error-correct-rev.rs:7:18
   |
LL |     let x: u32 = 22_usize;
   |                  ^^^^^^^^ expected u32, found usize
help: change the type of the numeric literal from `usize` to `u32`
   |
LL |     let x: u32 = 22_u32;
   |                  ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
